[package]
name = "turtl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1"
rasn = "0.11"
serde = { version = "1.0", features = ["derive"] }
stamp-core = { path = "../../stamp/core" }
thiserror = "1.0"
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

